# ic_compare

./: .gitignore  compare.py  compare.txt  setup.sh
python/: py_ic_funcs.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs  rust_fn.rs
