[package]
name = "rs_agg_methods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_agg_methods"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
numpy = "0.15"
ndarray = { version = "0.15.3", default-features = true }
ndarray-linalg = { version = "0.14.1", features = ["openblas"] }
ndarray-utils = "0.1.1"
statrs = "0.15.0"
rand = "0.8.5"
